Fixed the css issues on find friends component

--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -26,7 +26,7 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Friends</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i>Photos</a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Activity</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a class="nav-link" (click)=findFriends()><i class="bx bx-envelope"></i> Find Friends</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
