--- a/Angular/src/app/message/message.component.html
+++ b/Angular/src/app/message/message.component.html
@@ -1,3 +1,4 @@
+<!-- <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'> -->
 <div>
     <app-top></app-top>
 </div>
@@ -32,7 +33,7 @@
                     <input type="text" placeholder="Search contacts..." />
                 </div>
                 <div id="contacts">
-                    <ul>
+                    <ul class="contactList">
                         <li class="contact">
                             <div class="wrap">
                                 <span class="contact-status online"></span>
