--- a/Angular/src/assets/css/style.css
+++ b/Angular/src/assets/css/style.css
@@ -8,6 +8,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.nav-link{
+  cursor:pointer;
+}
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
