--- a/Angular/src/app/top/top.component.html
+++ b/Angular/src/app/top/top.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a title="Home" class="nav-link" href="#" >
+          <a title="Home" class="nav-link" (click)=home() >
             <i class="fa fa-home fa-1x"></i>
                 <span class="sr-only">(current)</span>
             </a>
