--- a/Angular/src/app/find-friend/find-friend.component.html
+++ b/Angular/src/app/find-friend/find-friend.component.html
@@ -2,163 +2,62 @@
     <div class="header" id="myheader">
         <app-top></app-top>
     </div>
-    <div class="content">            
+    <div class="content">   
         <div class="container findFriend fixedHeightContainer" >
             <div class="row innerContent">
                 <div class="col-md-8">
-                    <div class="people-nearby">
-                    
-                    <div class="nearby-user">
+                    <div class="heading" style="padding: 2%;        
+                    font-weight: bold;">
+                        <h4>Respond to Your {{friendRequestCount}} Friend Requests</h4>   
+                    </div>                           
+                    <div class="people-nearby">                   
+                    <div class="nearby-user" *ngFor="let account of friendRequestData">                
                         <div class="row">
                         <div class="col-md-2 col-sm-2">
                             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
                         </div>
                         <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Sophia Page</a></h5>
+                            <h5><a href="#" class="profile-link">{{account.name}}</a></h5>
                             <p>Software Engineer</p>
-                            <p class="text-muted">500m away</p>
+                            <!-- <p class="text-muted">500m away</p> -->
                         </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Emma Johnson</a></h5>
-                            <p>Model at Fashion</p>
-                            <p class="text-muted">800m away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
+                        <div class="col-sm-6 col-sm-6" style="margin-left: 50%;margin-top: -11%;">
+                            <button [id]="account.email" class="btn btn-default pull-right" (click)=addFriend(account.email)>{{buttonTextDelete}}</button>
+                            <button  [id]="account.email" class="btn btn-primary pull-right" 
+                             (click)=addFriend(account.email) style="margin-right: 6%;">{{buttonTextConfirm}}</button>
                         </div>
                         </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar5.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Nora Wilson</a></h5>
-                            <p>Writer at Newspaper</p>
-                            <p class="text-muted">2.5km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Diana Amber</a></h5>
-                            <p>Student</p>
-                            <p class="text-muted">700m away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Addison Thomas</a></h5>
-                            <p>Barber at Fashion</p>
-                            <p class="text-muted">1.5km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Jonathon Thompson</a></h5>
-                            <p>Fashion Designer</p>
-                            <p class="text-muted">2km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
+                    </div>       
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="content">   
+        <div class="container findFriend fixedHeightContainer" >
+            <div class="row innerContent">
+                <div class="col-md-8">
+                    <div class="heading" style="padding: 2%;        
+                    font-weight: bold;">
+                        <h4>People You May Know</h4>   
+                    </div>                           
+                    <div class="people-nearby">                   
+                    <div class="nearby-user" *ngFor="let account of result">                
                         <div class="row">
                         <div class="col-md-2 col-sm-2">
                             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
                         </div>
                         <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Olivia Steward</a></h5>
-                            <p>Creative Director</p>
-                            <p class="text-muted">2km away</p>
+                            <h5><a href="#" class="profile-link">{{account.name}}</a></h5>
+                            <p>Software Engineer</p>
+                            <!-- <p class="text-muted">500m away</p> -->
                         </div>
                         <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
+                            <button [id]="account.email" class="btn btn-primary pull-right" (click)=addFriend(account.email)>{{buttonTextAddFriend}}</button>
                         </div>
                         </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Elena Foster</a></h5>
-                            <p>Executive Officer</p>
-                            <p class="text-muted">4km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Brian Walton</a></h5>
-                            <p>Designer at Designer</p>
-                            <p class="text-muted">3km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="nearby-user">
-                        <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="#" class="profile-link">Cris Haris</a></h5>
-                            <p>General Manager at Manager</p>
-                            <p class="text-muted">1km away</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                            <button class="btn btn-primary pull-right">Add Friend</button>
-                        </div>
-                        </div>
-                    </div>
-                    </div>
+                    </div>       
+                </div>
                 </div>
             </div>
         </div>
