--- a/Angular/src/app/message/message.component.html
+++ b/Angular/src/app/message/message.component.html
@@ -18,14 +18,14 @@
                                 <li id="status-offline"><span class="status-circle"></span> <p>Offline</p></li>
                             </ul>
                         </div>
-                        <div id="expanded">
+                        <!-- <div id="expanded">
                             <label for="twitter"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></label>
                             <input name="twitter" type="text" value="mikeross" />
                             <label for="twitter"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></label>
                             <input name="twitter" type="text" value="ross81" />
                             <label for="twitter"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></label>
                             <input name="twitter" type="text" value="mike.ross" />
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div id="search">
