View friend request incomplete

--- a/Angular/src/app/find-friend/find-friend.component.html
+++ b/Angular/src/app/find-friend/find-friend.component.html
@@ -2,13 +2,16 @@
     <div class="header" id="myheader">
         <app-top></app-top>
     </div>
-    <div class="content">   
+    <div class="content" *ngIf=friendRequestExist>   
         <div class="container findFriend fixedHeightContainer" >
             <div class="row innerContent">
                 <div class="col-md-8">
                     <div class="heading" style="padding: 2%;        
                     font-weight: bold;">
                         <h4>Respond to Your {{friendRequestCount}} Friend Requests</h4>   
+                        <div class="link">
+                            <a (click)=viewSentRequests()>View Sent Requests</a>
+                        </div> 
                     </div>                           
                     <div class="people-nearby">                   
                     <div class="nearby-user" *ngFor="let account of friendRequestData">                
@@ -22,9 +25,38 @@
                             <!-- <p class="text-muted">500m away</p> -->
                         </div>
                         <div class="col-sm-6 col-sm-6" style="margin-left: 50%;margin-top: -11%;">
-                            <button [id]="account.email" class="btn btn-default pull-right" (click)=addFriend(account.email)>{{buttonTextDelete}}</button>
-                            <button  [id]="account.email" class="btn btn-primary pull-right" 
-                             (click)=addFriend(account.email) style="margin-right: 6%;">{{buttonTextConfirm}}</button>
+                            <button [id]="account.requestID +''+'_delete'" class="btn btn-default pull-right" (click)=deleteRequest(account.email,account.requestID)>{{buttonTextDelete}}</button>
+                            <button  [id]="account.requestID +''+'_accept'" class="btn btn-primary pull-right" 
+                             (click)=confirmRequest(account.email,account.requestID) style="margin-right: 6%;">{{buttonTextConfirm}}</button>
+                        </div>
+                        </div>
+                    </div>       
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="content" *ngIf=viewFriendRequest>   
+        <div class="container findFriend fixedHeightContainer" >
+            <div class="row innerContent">
+                <div class="col-md-8">
+                    <div class="heading" style="padding: 2%;        
+                    font-weight: bold;">
+                        <h4>Your Friend Requests</h4>   
+                    </div>                           
+                    <div class="people-nearby">                   
+                    <div class="nearby-user" *ngFor="let account of friendRequestData">                
+                        <div class="row">
+                        <div class="col-md-2 col-sm-2">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <h5><a href="#" class="profile-link">{{account.name}}</a></h5>
+                            <p>Software Engineer</p>
+                            <!-- <p class="text-muted">500m away</p> -->
+                        </div>
+                        <div class="col-sm-6 col-sm-6" style="margin-left: 50%;margin-top: -11%;">
+                            <button [id]="account.requestID +''+'_delete'" class="btn btn-default pull-right" (click)=deleteRequest(account.email,account.requestID)>{{buttonTextDelete}}</button>                    
                         </div>
                         </div>
                     </div>       
@@ -40,7 +72,10 @@
                     <div class="heading" style="padding: 2%;        
                     font-weight: bold;">
                         <h4>People You May Know</h4>   
-                    </div>                           
+                        <div *ngIf=!friendRequestExist&&(!viewFriendRequest) class="link">
+                            <a (click)=viewSentRequests()>View Sent Requests</a>
+                        </div>    
+                    </div>                                   
                     <div class="people-nearby">                   
                     <div class="nearby-user" *ngFor="let account of result">                
                         <div class="row">
