--- a/Angular/src/app/find-friend/find-friend.component.css
+++ b/Angular/src/app/find-friend/find-friend.component.css
@@ -8,6 +8,11 @@
  .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto{
    position: unset ; 
 }
+.link{
+  color: #149ddd;
+  cursor: pointer;
+  text-decoration: underline;
+}
 .btn{
   border-radius: 0 !important;
 }
