--- a/Angular/src/app/top/top.component.html
+++ b/Angular/src/app/top/top.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li>
-          <a class="navbar-brand" href="#">MyFace</a>
+          <a class="navbar-brand" href="#">{{name}}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
