friends component front-end

--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -23,11 +23,10 @@
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Friends</span></a></li>
+          <li><a class="nav-link" (click)=friends()><i class="bx bx-file-blank"></i> <span>Friends</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i>Photos</a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Activity</a></li>
           <li><a class="nav-link" (click)=findFriends()><i class="bx bx-envelope"></i> Find Friends</a></li>
-
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
