message component processing

--- a/Angular/src/app/friends/friends.component.html
+++ b/Angular/src/app/friends/friends.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-md-7 col-sm-7">
                         <h5><a href="#" class="profile-link">{{account.name}}</a></h5>
-                        <p *ngIf=account.mutualFriendExist>{{account.mutualFriendText}}</p>
+                        <p>{{account.mutualFriendText}}</p>
                         <!-- <p class="text-muted">500m away</p> -->
                     </div>
                     <div class="col-md-3 col-sm-3">
