--- a/Angular/src/app/message/message.component.css
+++ b/Angular/src/app/message/message.component.css
@@ -12,6 +12,9 @@
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
     -webkit-font-smoothing: antialiased;
   }
+  .fa{
+    color: #acb0b0 !important;
+  }
   .contactList{
     padding: 0%;
   }
@@ -36,8 +39,12 @@
     max-width: 340px;
     width: 40%;
     height: 100%;
-    background: #2c3e50;
-    color: #f5f5f5;
+    background: #f5f5f5;
+    color: #2c3e50;
+    /*
+      background:#2c3e50;
+      color:#f5f5f5;
+    */
     overflow: hidden;
     position: relative;
   }
@@ -50,6 +57,8 @@
   #frame #sidepanel #profile {
     width: 80%;
     margin: 25px auto;
+    margin-bottom: 2%;
+    margin-left: 5%;
   }
   @media screen and (max-width: 735px) {
     #frame #sidepanel #profile {
@@ -129,6 +138,9 @@
   #frame #sidepanel #profile .wrap p {
     float: left;
     margin-left: 15px;
+    font-size: 30px;
+    font-family: monospace;
+    margin-top: -2%;
   }
   @media screen and (max-width: 735px) {
     #frame #sidepanel #profile .wrap p {
@@ -296,8 +308,8 @@
     background: #435f7a;
   }
   #frame #sidepanel #search {
-    border-top: 1px solid #32465a;
-    border-bottom: 1px solid #32465a;
+    /* border-top: 1px solid #32465a;
+    border-bottom: 1px solid #32465a; */
     font-weight: 300;
   }
   @media screen and (max-width: 735px) {
@@ -314,34 +326,41 @@
     padding: 10px 0 10px 46px;
     width: calc(100% - 25px);
     border: none;
-    background: #32465a;
-    color: #f5f5f5;
+    /* background: #32465a; */
+    /* color: #f5f5f5; */
+    color: #32465a;
   }
   #frame #sidepanel #search input:focus {
     outline: none;
-    background: #435f7a;
+    /* background: #435f7a; */
   }
   #frame #sidepanel #search input::-webkit-input-placeholder {
-    color: #f5f5f5;
+    /* color: #f5f5f5; */
+    color: #acb0b0;
   }
   #frame #sidepanel #search input::-moz-placeholder {
-    color: #f5f5f5;
+    /* color: #f5f5f5; */
+    color: #32465a;
   }
   #frame #sidepanel #search input:-ms-input-placeholder {
-    color: #f5f5f5;
+    /* color: #f5f5f5; */
+    color: #32465a;
   }
   #frame #sidepanel #search input:-moz-placeholder {
-    color: #f5f5f5;
+    /* color: #f5f5f5; */
+    color: #32465a;
   }
   #frame #sidepanel #contacts {
     height: calc(100% - 177px);
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow-y: auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 735px) {
     #frame #sidepanel #contacts {
       height: calc(100% - 149px);
-      overflow-y: scroll;
+      /* overflow-y: scroll; */
+      overflow-y: auto;
       overflow-x: hidden;
     }
     #frame #sidepanel #contacts::-webkit-scrollbar {
@@ -353,10 +372,12 @@
   }
   #frame #sidepanel #contacts::-webkit-scrollbar {
     width: 8px;
-    background: #2c3e50;
+    /* background: #2c3e50; */
+    background:#ccd3db;
   }
   #frame #sidepanel #contacts::-webkit-scrollbar-thumb {
-    background-color: #243140;
+    /* background-color: #243140; */
+    background-color: #7f8182;
   }
   #frame #sidepanel #contacts ul li.contact {
     position: relative;
@@ -369,9 +390,10 @@
       padding: 6px 0 46px 8px;
     }
   }
-  #frame #sidepanel #contacts ul li.contact:hover {
-    background: #32465a;
+  /* #frame #sidepanel #contacts ul li.contact:hover {
+     background: #32465a; 
   }
+   */
   #frame #sidepanel #contacts ul li.contact.active {
     background: #32465a;
     border-right: 5px solid #435f7a;
@@ -555,6 +577,7 @@
     max-height: calc(100% - 93px);
     overflow-y: scroll;
     overflow-x: hidden;
+    width: 100%;
   }
   @media screen and (max-width: 735px) {
     #frame .content .messages {
@@ -575,6 +598,7 @@
     margin: 15px 15px 5px 15px;
     width: calc(100% - 25px);
     font-size: 0.9em;
+    margin-left: -2%;
   }
   #frame .content .messages ul li:nth-last-child(1) {
     margin-bottom: 20px;
